--- a/mscore/manual/sources/MuseScore-ro.html
+++ b/mscore/manual/sources/MuseScore-ro.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_778fd380a8d056d6042d4c47ae44c58f.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_192a04a7066017780002ee8b091abbb0.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx"}});
@@ -13,7 +13,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/ro/manual/manual' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_16fe280631badfe1c52bff269abfbff0.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_4eb6c605f0d66872c47ff3690a734887.css" />
   </head>
   <body>
         <div class="print-logo"></div>
@@ -181,31 +181,58 @@ Pe Macdirectorul de modele se găsește la  /Applications/MuseScore.app/Contents
   <p>Capitolul "Primele noțiuni" de mai sus, v-a ghidat prin procesele de <a href="http://musescore.org/ro/manual/instalarea" title="Instalarea">instalare a programului</a> și <a href="http://musescore.org/ro/manual/crearea-unei-noi-partituri" title="Crearea unei noi partituri">creare a unei noi partituri</a>. Capitolul curent, denumit "Noțiuni de bază", vă face o prezentarea generală a aplicației MuseScore și descrie principalele metode de interacțiune cu partitura.</p>
   <div id="node-3256" class="section-3">
   <h1 class="book-heading">Introducerea notelor</h1>
-  <h3>Adăugarea</h3>
-<p>Pentru a adăuga o măsură la sfîrșitul portativului, tastați: <kbd><kbd>Ctr</kbd>+<kbd>B</kbd></kbd> (pe Mac: <kbd><kbd>⌘</kbd>+<kbd>B</kbd></kbd>).<br />
-Pentru a adăuga mai multe măsuri deodată și cu mai multe opțiuni, selectați poziția din meniu: <kbd><samp class="menu">Create</samp> → <samp class="submenu">Measures</samp> → <samp class="menuitem">Append Measures...</samp></kbd>.</p>
-<h3>Inserarea</h3>
-<p>Înainte de inserarea efectivă, trebuie selectată măsura existentă deja în partitură, în fața căreia se va introduce o măsură nouă. Pentru aceasta, se face click oriunde în interiorul măsurii (de regulă e bine sa folosim suprafețele dintre note, pentru a nu da comenzi ambigui).  Confirmarea că operațiunea a fost efectuată corect este dată de dreptunghiul albastru cu chenar continuu apărut, care încadrează notele măsurii selectate.<br />
-Acum, puteți tasta următoarea secvență pentru a insera o nouă măsură: <kbd><kbd>Ins</kbd></kbd> (practic, apăsați tasta "Insert").<br />
-Pentru a insera mai multe măsuri, folosiți opțiunea din meniul: <kbd><samp class="menu">Create</samp> → <samp class="submenu">Measures</samp> → <samp class="menuitem">Insert Measures...</samp></kbd>.</p>
-<h3>Ștergerea</h3>
-<p>Pentru a șterge una sau mai multe măsuri, porțiunea respectivă trebuie selectată. Pentru aceasta, se apasă și se ține apăsată tasta "Ctrl" (control), după care se face click undeva în interiorul măsurii ce va fi ștearsă (e bine să evitați click pe note sau alte elemente grafice): <kbd><kbd>Ctr</kbd></kbd> (pe Mac: <kbd><kbd>⌘</kbd></kbd>). Confirmarea realizării operației de marcare este apariția unui chenar albastru cu linie întreruptă, care cuprinde toate măsurile ce se găsesc sincron pe verticala grupului de portative (în cazul pieselor cu mai multe partide), sau numai măsura ce va fi ștearsă (în cazul în care există un singur portativ).<br />
-Pentru extinderea selecției la mai multe măsuri, pe orizontală, se ține în continuare apăsată tasta "Ctrl" și se face click pe măsura de la finalul intervalului de portativ ce se dorește a fi șters.<br />
-Ștergerea efectivă a zonei marcate, se face prin apăsarea tastei "Delete" (marcată "Del" pe anumite tastaturi): <kbd><kbd>Del</kbd></kbd> (pe Mac: <kbd><kbd>Fn</kbd>+<kbd>Backspace</kbd></kbd>).</p>
-<h3>Proprietăți</h3>
-<p>Pentru editarea (modificarea, adăugarea) proprietăților unei măsuri, faceți click dreapta pe o porțiune liberă a măsurii și, din meniul ce apare, selectați (cu click stînga) poziția <kbd><samp class="menuitem">Measure Properties...</samp></kbd>. Dacă operațiunea este efectuată corect, aveți acces la fereastra de mai jos:</p>
-<p><span style="color: red; font-weight: bold;">NOT FOUND: measure-properties.png</span></p>
-<h3>Portative (<i>Staves</i>)</h3>
-<p>Proprietatea <em>Visible</em> ("vizibil") vă permite să faceți vizibile (prin bifare) sau să "ascundeți" (prin de-bifare) anumite portative de pe verticala măsurii respective. Valoarea acestei proprietăți se poate modifica oricînd doriți, fără a afecta conținutul portativelor "ascunse".</p>
-<p>Propietatea <em>Stemless</em> ("fără codiță") permite ca, în măsura selectată, notele să fie prezentate în notație "fără codiță". Notele care, în notația normală, ar avea codiță (bastonaș vertical și buclă simplă, dublă sau cvadruplă, funcție de valoarea fiecărei note) vor fi marcate doar cu corpul notei, plasat pe linia corespunzătoare a portativului. </p>
-<h3>Durata (<i>Duration</i>)</h3>
-<p>Durata nominală (<em>Nominal</em> duration) a măsurii este cea înscrisă în armura portativului. Durata reală (sau "locală") a măsurii (<em>Actual</em>) poate să aibă orice altă valoare, funcție de necesitățile compozitorului, deși (de regulă) are aceeași valoare cu durata nominală.</p>
-<h3>Excepția (<i>Irregular</i>)</h3>
-<p>O măsură setată (bifată) ca "excepție" ("irregular") nu este luată în considerare la numărătoarea măsurilor partiturii. În mod normal, măsura de început a partiturii (măsură care, de multe ori, are durată diferită de cea nominală) este marcată și ca excepție. Dacă utilizați o versiune de MuseScore 0.9.4 sau mai veche, după marcarea măsurii ca excepție trebuie să salvați și să redescideți partitura, pentru ca numărătoarea totală a măsurilor să reflecte modficarea făcută</p>
-<h3>Numărul de repetări (<i>Repeat count</i>)</h3>
-<p>Dacă măsura pe care o modificați este la sfîrșitului unei porțiuni de portativ marcate ca "repetiție" (vedeți și capitolul <a href="http://musescore.org/ro/manual/repetiția" title="Repetiția">Repetiția</a>), puteți stabili de cîte ori se repetă porțiunea respectivă în momentul reproducerii piesei muzicale.</p>
-<h3>Despărțirea pauzelor multi-măsură (<i>Break multi-measure rests</i>)</h3>
-<p>Bifarea acestei proprietăți activează tratarea automată a pauzelor. Tratarea automată survine după modificarea duratei nominale a portativului (ca urmare a modificării valorii din armură), programul MuseScore procedînd la reîmpărțirea automată a materialului muzical în măsuri conforme cu noua durată nominală. Astfel, e posibil ca o anumită pauză (situată inițial la sfîrșitul unei măsuri) să fie mai lungă decît permite valoarea totală a notelor+pauzelor din măsura respectivă. Operația de despărțire automată împarte pauza în două pauze mai mici, care sînt plasate la sfîrșitul măsurii de care aparținea pauza "mare" la început, și respectiv la începutul măsurii următoare, astfel încît să fie respectată durata nominală a celor două măsuri adiacente. Vedeți și capitolul <a href="http://musescore.org/ro/freelinking/Durata%20m%C4%83surii" class="freelinking noexist" rel="nofollow">Durata măsurii</a>.</p>
+  <p>După crearea partiturii, pasul următor este introducerea notelor (sau, în cazul în care editați o lucrare existentă - cum ar fi partitura demonstrativă, se va produce modificarea notelor deja introduse). Pentru aceasta, trebuie să treceți în starea (modul) de introducere note, operațiune realizată prin apăsarea butonului "N" de pe bara rapidă de unelte (sub bara de meniuri):</p>
+<ul>
+<li><kbd><kbd>N</kbd></kbd>: 	Trecerea în modul introducere note (<samp class="mode">Note entry mode</samp>).</li>
+</ul>
+<p>Pe portativ apare o bară roșie verticală, care marchează locul în care se plasează nota curent introdusă.</p>
+<p>Ieșirea din modul introducere note se face apăsînd tasta Escape (poziționată în partea stînga sus pe tastatură și marcată de obicei "ESC"):</p>
+<ul>
+<li><kbd><kbd>Escape</kbd></kbd>: 	Ieșirea din modul introducere note (<samp class="mode">Note entry mode</samp>).</li>
+</ul>
+<p>Înainte de a trece efectiv la introducere, trebuie să facem precizarea că MuseScore calculează automat și permanent valoarea elementelor introduse în măsură. În momentul în care introduceți o notă sau o măsură de o anumită valoare (durată), programul calculează imediat și completează măsura cu pauze cu valoare totală egală cu diferența rămasă pînă la valoarea (durata) totală a măsurii, valoare stabilită fie prin măsura general valabilă a portativului, fie prin valoarea particulară ce se poate stabili în anumite puncte ale lucrării (detalii vom vedea ulterior).</p>
+<p>După intrarea în modul introducere note (<samp class="mode">Note entry mode</samp>) trebuie să stabiliți ce fel de notă sau pauză urmează să plasați pe portativ (durata notei sau pauzei, cu sau fără punct, etc.), urmînd ca înălțimea notei să fie stabilită funcție de poziția efectivă de pe portativ. Elementele de selecție se găsesc tot pe bara de unelte rapide de pe care ați selectat butonul "N" anterior. </p>
+<p>Selecția notelor sau pauzelor se poate face și cu combinații de taste, ceea ce poate aduce economii importante de timp la editare, dar această metodă se recomandă doar utilizatorilor experimentați.</p>
+<p>Noi recomandăm, pentru început, folosirea mausului în alegerea unor elemente de meniu cît mai clare și mai detaliate, pentru o înțelegere și deprindere cît mai bună a metodelor și facilităților oferite de MuseScore.</p>
+<p>In versiunile MuseScore 0.9.4 sau mai recente, durata notelor se poate obține de pe tastatură apăsînd următaorele:</p>
+<ul>
+<li><kbd><kbd>1</kbd></kbd>: Șaizecipătrime (<i>Hemidemisemiquaver</i>)</li>
+<li><kbd><kbd>2</kbd></kbd>: Treizecidoime (<i>Demisemiquaver</i>)</li>
+<li><kbd><kbd>3</kbd></kbd>: Șaisprezecime (<i>Semiquaver</i>)</li>
+<li><kbd><kbd>4</kbd></kbd>: Optime (<i>Quaver</i>)</li>
+<li><kbd><kbd>5</kbd></kbd>: Pătrime (<i>Crotchet</i>)</li>
+<li><kbd><kbd>6</kbd></kbd>: Doime (<i>Minim</i>)</li>
+<li><kbd><kbd>7</kbd></kbd>: Notă întreagă (<i>Semibreve</i>)</li>
+<li><kbd><kbd>8</kbd></kbd>: Notă dublu întreagă (<i>Breve</i>)</li>
+<li><kbd><kbd>9</kbd></kbd>: Notă cvadruplu întreagă (<i>Longa</i>)</li>
+<li><kbd><kbd>.</kbd></kbd>: Punctul schimbă durata notei selectate, adăugînd 50% durată în plus față de durata inițială (notă cu punct)</li>
+</ul>
+<p>Similar, înălțimea notelor se poate selecta și cu ajutorul tastaturii (în afară de metoda directă, de plasare a lor pe portativ cu ajutorul mausului).<br />
+Notele de mai jos au fost introduse folosind tastele:</p>
+<p><kbd><kbd>C</kbd></kbd> <kbd><kbd>D</kbd></kbd> <kbd><kbd>E</kbd></kbd> <kbd><kbd>F</kbd></kbd> <kbd><kbd>G</kbd></kbd> <kbd><kbd>A</kbd></kbd> <kbd><kbd>B</kbd></kbd> <kbd><kbd>C</kbd></kbd><br />
+<img src="/sites/musescore.org/files/noteentry1_0.png" alt="Introducerea notelor de la tastatură: C, D, E, F, G, A, B, C" title="Introducerea notelor de la tastatură: C, D, E, F, G, A, B, C" width="430" height="82" class="inline" /></p>
+<p>Dacă, după stabilirea duratei, se apasă tasta de spațiu (SPACE - bara lungă de sub tastele cu litere), atunci pe portativ se va inscripționa o pauză cu valoarea respectivă, și nu o notă:</p>
+<p><kbd><kbd>Space</kbd></kbd> creează o pauză</p>
+<p>Exemplu: aveți mai jos o suită de taste ce sînt apăsate și rezultatul acestei acțiuni, pe portativ:<br />
+<kbd><kbd>C</kbd> <kbd>D</kbd> <kbd>Space</kbd> <kbd>E</kbd></kbd><br />
+<img src="/sites/musescore.org/files/noteentry2_0.png" alt="Exemplu de măsură introdusă cu tastele: C, D, pauză, E" title="Exemplu de măsură introdusă cu tastele: C, D, pauză, E" width="237" height="59" class="inline" /></p>
+<p>Pentru crearea de note multiple (acorduri) se folosește tasta SHIFT (care se apasă înainte de selectarea notei și se ține apăsată pînă se introduc toate notele din acordul respectiv):<br />
+<kbd><kbd>Shift</kbd></kbd> și se apasă numele notei</p>
+<p>Aveți mai jos un exemplu:<br />
+<kbd><kbd>C</kbd></kbd> <kbd><kbd>D</kbd></kbd> <kbd><kbd>Shift</kbd>+<kbd>F</kbd></kbd> <kbd><kbd>Shift</kbd>+<kbd>A</kbd> <kbd>E</kbd> <kbd>F</kbd></kbd><br />
+<img src="/sites/musescore.org/files/noteentry3_0.png" alt="Exemplu de măsură introdusă cu tastele: C, D terță mică, E, F" title="Exemplu de măsură introdusă cu tastele: C, D terță mică, E, F" width="233" height="59" class="inline" /></p>
+<p>Mărirea duratei notei se face prin alăturarea unui punct acelei note. Exemplu:<br />
+<kbd><kbd>5</kbd></kbd> <kbd><kbd>.</kbd></kbd> <kbd><kbd>C</kbd></kbd> <kbd><kbd>4</kbd></kbd> <kbd><kbd>D</kbd></kbd> <kbd><kbd>E</kbd></kbd> <kbd><kbd>F</kbd></kbd> <kbd><kbd>G</kbd></kbd> <kbd><kbd>A</kbd></kbd><br />
+<img src="/sites/musescore.org/files/note-entry-4.png" alt="Optime cu punct: C cu punct, D, E, F, G, A" title="Optime cu punct: C cu punct, D, E, F, G, A" width="244" height="59" class="inline" /></p>
+<p>(Notă: versiunile 0.9.3 sau mai vechi utilizează combinații de taste diferite de cele prezentate mai sus. Recomandăm să faceți upgrade la ultimele versiuni, pentru a nu persevera în metode care oricum vor trebui abandonate, produsul MuseScore fiind într-o continuă dezvoltare și evoluție).</p>
+<p>Pentru modificarea octavelor folosiți următoarele combinații de taste (exemplu):</p>
+<ul>
+<li><kbd><kbd>Ctrl</kbd>+<kbd>Up</kbd></kbd> (Pe Mac: <kbd><kbd>⌘</kbd>+<kbd>Up</kbd></kbd>):	Ridică înălțimea notei selectate cu o octavă</li>
+<li><kbd><kbd>Ctrl</kbd>+<kbd>Down</kbd></kbd> (Pe Mac: <kbd><kbd>⌘</kbd>+<kbd>Down</kbd></kbd>):	Coboară înălțimea notei selectate cu o octavă</li>
+</ul>
+<p>În exemplul de mai sus, "Up" și "Down" se referă la tastele cu săgeți "Sus", respectiv "Jos".</p>
+<h3>Tastatura MIDI</h3>
+<p>Înălțimea notelor poate fi introdusă și direct de la o claviatură cu interfață MIDI (prin apăsarea clapelor), cuplată la un calculator cu sistem de operare Windows sau Linux, pentru MuseScore cu versiune minimă 0.9.4. Versiune MuseScore 0.9.3 sau mai veche permite tastatură MIDI doar pentru Linux.</p>
   </div>
 <div id="node-3260" class="section-3">
   <h1 class="book-heading">Copy și paste</h1>
@@ -370,22 +397,7 @@ respectiv<br />
 <div id="node-4685" class="section-2">
   <h1 class="book-heading">Notații</h1>
   <p>În capitolul precedent (Noțiuni de bază) ați putut învăța cum să faceți <a href="http://musescore.org/ro/manual/introducerea-notelor" title="Introducerea notelor">introducerea notelor</a> și cum să utilizați <a href="http://musescore.org/ro/manual/paleta-cu-simboluri" title="Paleta cu simboluri">paleta cu simboluri</a>. Capitolul "Notații" descrie diferite tipuri de notații utilizate în scrierea partiturilor, la un nivel mai detaliat și mai avansat.</p>
-  <div id="node-3460" class="section-3">
-  <h1 class="book-heading">Alterația</h1>
-  <p><strong>Alterațiile</strong> pot fi plasate sau modificate prin drag și drop a elementului grafic dorit (diez, bemol, becar, etc.) de pe paleta cu simboluri (după activarea grupei <i>Accidentals</i>), pe poziția dorită din partitură.</p>
-<p><img src="/sites/musescore.org/files/accidentalspalette.png" alt="Grupa Accidentals de pe paleta cu simboluri" title="Grupa Accidentals de pe paleta cu simboluri" width="175" height="168" class="inline" /></p>
-<p>Dacă doriți doar să modificați înălțimea unei note (prin deplasarea acesteia în sus și în jos pe portativ), puteți folosi niște combinații simple de taste. Selectați nota făcînd click stînga pe ea, apoi apăsați:</p>
-<ul>
-<li><kbd><kbd>Up</kbd></kbd>:   	Ridicați nota cu un semiton.</li>
-<li><kbd><kbd>Down</kbd></kbd>:	Coborîți nota cu un semiton.</li>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>Up</kbd></kbd>:	Ridicați nota cu o octavă.</li>
-<li><kbd><kbd>Ctrl</kbd>+<kbd>Down</kbd></kbd>:	Coborîți nota cu o octavă.</li>
-</ul>
-<p>În exemplul de mai sus, "Up" și "Down" se referă la tastele cu săgeți "Sus", respectiv "Jos".</p>
-<p>La modificarea înălțimii notelor, MuseScore corectează automat notația, adăugînd alterațiile necesare. Dacă doriți să faceți alte modificări de înălțime a notelor, faceți drag și drop alterația dorită din panoul cu simboluri. Dacă modificați ulterior notele prin urcare / coborîre cu ajutorul săgeților, alterațiile introduse manual sînt șterse automat de către program și puse alterațiile corecte (dacă sînt necesare).</p>
-<p>Funcția din meniu  <kbd><samp class="menu">Notes</samp> → <samp class="menuitem">Pitch spell</samp></kbd> încearcă să determine automat alterațiile potrivite pentru întreaga partitură.</p>
-  </div>
-<div id="node-3461" class="section-3">
+  <div id="node-3461" class="section-3">
   <h1 class="book-heading">Arpegiul</h1>
   <p><strong>Arpegiile</strong> se plasează modificate prin drag și drop a elementului grafic dorit (arpegiu, glisando, etc.) de pe paleta cu simboluri (după activarea grupei <i>Arpeggio / Glissando</i>), pe poziția dorită din partitură.</p>
 <p><img src="/sites/musescore.org/files/arpeggio-palette.png" alt="Grupa Arpeggio din paleta cu simboluri" title="Grupa Arpeggio din paleta cu simboluri" width="135" height="84" class="inline" /></p>
@@ -437,7 +449,7 @@ respectiv<br />
   <h1 class="book-heading">Respirația</h1>
   <p>Pentru a plasa un simbol de respirație <strong>breath</strong> (care poate fi inspirație - simbol virgulă în poziție normală, sau expirație - virgulă în poziție răsturnată), faceți drag simbolul respectiv din paleta de simboluri, către locul unde doriți amplasarea lui și, în final, faceți drop (aruncați-l) la locul respectiv.<br />
 Simbolul de respirație se amplasează după note. In versiunea MuseScore 0.9.5 sau mai veche, simbolul de respirație se amplasează <em>în fața</em> notei pentru care s-a făcut operațiunea de drag / drop.</p>
-<p><img src="/sites/musescore.org/files/breathpalette_0.png" alt=" paleta cu simboluri de respirație" title=" paleta cu simboluri de respirație" width="185" height="67" class="inline" /></p>
+<p><span style="color: red; font-weight: bold;">NOT FOUND: breathpalette.png</span></p>
 <p>Iată un exemplu de simbol de respirație plasat pe un portativ:<br />
 <img src="/sites/musescore.org/files/breath_0.png" alt="Respirația" title="Respirația" width="284" height="181" class="inline" /></p>
   </div>
