--- a/trunk/mscore/manual/sources/MuseScore-ru.html
+++ b/trunk/mscore/manual/sources/MuseScore-ru.html
@@ -4,23 +4,24 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_39e905e25618740e14fc981d572e8d31.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_3817dec750c40733f83e7faa3de4f4fa.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/ru/c%D0%BF%D1%80%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%B8%D0%BA/c%D0%BF%D1%80%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%B8%D0%BA' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_4eb6c605f0d66872c47ff3690a734887.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_0acd95bf640f2dcd5d8e053af66fa2b4.css" />
   </head>
   <body>
-        <div class="print-logo"></div>
-    <div class="print-site_name">Опубликовано <em>MuseScore</em> (<a href="http://musescore.org">http://musescore.org</a>)</div>
-    <p />
-    <div class="print-breadcrumb"><a href="/ru">Главная</a> &gt; Cправочник</div>
+        <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
+</div>
+    <div class="print-slogan">Свободная программа для набора музыкальных партитур</div>
+    <p></p>
     <hr class="print-hr" />
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/ru">http://musescore.org</a> on Ср, 09/22/2010</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -238,7 +239,7 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 <li><kbd><kbd>Shift</kbd>+<kbd>Вправо</kbd></kbd>: 		Раздвигает лигу вправо</li>
 <li><kbd><kbd>Tab</kbd></kbd>: 		Перейти к следующей рукоятке</li>
 </ul>
-<p>Смотрите также: <a href="http://musescore.org/handbook/text-editing" title="Text editing">Text editing</a>, <a href="http://musescore.org/ru/cправочник/лига" title="Лига">Лига</a>, <a href="http://musescore.org/handbook/bracket" title="Bracket">Bracket</a>, <a href="http://musescore.org/handbook/lines" title="Lines">Lines</a></p>
+<p>Смотрите также: <a href="http://musescore.org/en/handbook/text-editing" title="Text editing">Text editing</a>, <a href="http://musescore.org/ru/cправочник/лига" title="Лига">Лига</a>, <a href="http://musescore.org/en/handbook/bracket" title="Bracket">Bracket</a>, <a href="http://musescore.org/ru/freelinking/Lines" class="freelinking noexist" rel="nofollow">Lines</a></p>
   </div>
 <div id="node-2434" class="section-3">
   <h1 class="book-heading">Работа с тактами</h1>
@@ -343,7 +344,7 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 <div id="node-2509" class="section-3">
   <h1 class="book-heading">Арпеджио</h1>
   <p>Чтобы отметить <strong>арпеджио</strong> перетащите соответствующий значок из палитры арпеджио на ноту аккорда..</p>
-<p><img src="/sites/musescore.org/files/arpeggio-palette.png" alt="Arpeggio Palette" title="Arpeggio Palette" width="135" height="84" class="inline" /></p>
+<p><img src="/sites/musescore.org/files/arpeggio-palette_0.png" alt="Arpeggio Palette" title="Arpeggio Palette" width="167" height="82" class="inline" /></p>
 <p>В версии 0.9.5 появилась возможность изменять длину арпеджио: щёлкните два раза на значке, появятся ручки, которыми Вы сможете установить желаемую длину</p>
 <p><img src="/sites/musescore.org/files/arpeggio-multi-staff_0.png" alt="Arpeggio spanning two staves" title="Arpeggio spanning two staves" width="136" height="110" class="inline" /></p>
   </div>
@@ -441,7 +442,7 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
   </div>
 <div id="node-2592" class="section-3">
   <h1 class="book-heading">Крещендо и Диминуэндо</h1>
-  <p><strong>Hairpins</strong> are <a href="http://musescore.org/handbook/lines" title="lines">line</a> objects. To create a hairpin first select a note to mark the start point.</p>
+  <p><strong>Hairpins</strong> are <a href="http://musescore.org/ru/freelinking/lines" class="freelinking noexist" rel="nofollow">line</a> objects. To create a hairpin first select a note to mark the start point.</p>
 <ul>
 <li><kbd><kbd>H</kbd></kbd>: Поставить "вилку" крещендо</li>
 <li><kbd><kbd>Shift</kbd>+<kbd>H</kbd></kbd>: Поставить "вилку" диминуэндо (декрещендо)</li>
@@ -473,7 +474,7 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 <div id="node-2594" class="section-3">
   <h1 class="book-heading">Дополнительные обозначения</h1>
   <p>Обратите внимание на раздел <a href="http://musescore.org/ru/cправочник/палитра" title="Палитра">палитры</a> - <strong>Черты</strong>, в нём собраны разные обозначения. С ним можно работать как и с другими разделами палитры, перетаскиванием мышкой, на нотный стан.</p>
-<p><img src="/sites/musescore.org/files/linepalette_0.png" alt="Lines palette" title="Lines palette" width="184" height="208" class="inline" /></p>
+<p><img src="/sites/musescore.org/files/line-palette.png" alt="Lines palette" title="Lines palette" width="169" height="207" class="inline" /></p>
 <h3>Изменение длины</h3>
 <ol>
 <li>Если Вы в <samp class="mode">Режиме ввода нот</samp>, выйдите из него нажмав <kbd><kbd>N</kbd></kbd></li>
@@ -716,7 +717,7 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 <li>Выберите темп и нажмите <kbd><samp class="button">OK</samp></kbd></li>
 </ul>
 <p>Note that in versions 0.9.3 or earlier it is not possible to change the tempo text or BPM from the initial Tempo Text dialog. However you can change both of these after you add a tempo text to the score.</p>
-<p>Установленный темп можно изменить дважды щёлкнув на тексте отмечающем темп, войдёте в <samp class="mode">режим редактирования</samp>. You can use the <a href="http://musescore.org/handbook/text-editing" title="text editing">F2 palette</a> to add a quarter note or another duration for a metronome mark in the tempo text.<br />
+<p>Установленный темп можно изменить дважды щёлкнув на тексте отмечающем темп, войдёте в <samp class="mode">режим редактирования</samp>. You can use the <a href="http://musescore.org/en/handbook/text-editing" title="text editing">F2 palette</a> to add a quarter note or another duration for a metronome mark in the tempo text.<br />
 <img src="/sites/musescore.org/files/met_mark.jpg" alt="Metronome mark: Andante quarter note = 75" title="Metronome mark: Andante quarter note = 75" width="123" height="29" class="inline" /></p>
 <p>Количество ударов в минуту (BPM) можно изменить щелчком правой кнопки мыши на тексте <kbd><samp class="menuitem">Свойства темпа</samp></kbd></p>
 <p>Заметка: Темп на пульте управления перекрывается текстовым обозначением темпа в партитуре.</p>
@@ -748,7 +749,7 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 </div>
 <div id="node-2686" class="section-2">
   <h1 class="book-heading">Текст</h1>
-  <p>В предыдущей части мы затронули текстовое обозначение <a href="http://musescore.org/ru/cправочник/темп" title="Темп">темпа</a>. В этой части мы рассмотрим как расставлять <a href="http://musescore.org/ru/cправочник/названия-аккордов" title="Названия аккордов">имена аккордов</a>, <a href="http://musescore.org/ru/cправочник/либретто" title="Либретто">тексты песен</a>, <a href="http://musescore.org/ru/cправочник/аппликатура" title="Аппликатура">аппликатуру</a> и прочие текстовые элементы партитуры. В прошлой части мы затронули текстовое обозначение <a href="http://musescore.org/hu/kézikönyv/tempó" title="tempo">темпа</a>. Все они доступны из меню <kbd><samp class="menu">Вставка</samp> → <samp class="submenu">Текст</samp></kbd>.</p>
+  <p>В предыдущей части мы затронули текстовое обозначение <a href="http://musescore.org/ru/cправочник/темп" title="Темп">темпа</a>. В этой части мы рассмотрим как расставлять <a href="http://musescore.org/ru/cправочник/названия-аккордов" title="Названия аккордов">имена аккордов</a>, <a href="http://musescore.org/ru/cправочник/либретто" title="Либретто">тексты песен</a>, <a href="http://musescore.org/ru/cправочник/аппликатура" title="Аппликатура">аппликатуру</a> и прочие текстовые элементы партитуры. В прошлой части мы затронули текстовое обозначение <a href="http://musescore.org/da/håndbog/tempo" title="tempo">темпа</a>. Все они доступны из меню <kbd><samp class="menu">Вставка</samp> → <samp class="submenu">Текст</samp></kbd>.</p>
   <div id="node-2689" class="section-3">
   <h1 class="book-heading">Редактирование текста</h1>
   <p>Двойным щелчком на тексте активируйте <samp class="mode">режим редактирования</samp>:<br />
@@ -919,9 +920,9 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <hr class="print-hr" />
-    <div class="print-footer">На условиях лицензии <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a>, 2002-2010 <a href="mailto:ws at seh dot de">Werner Schweer</a> и другие.
+    <div class="print-footer">На условиях лицензии <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a>, 2002-2010 <a href="mailto:werner@musescore.org">Werner Schweer</a> и другие.
 </div>
+    <hr class="print-hr" />
     <div class="print-source_url"></div>
     <div class="print-links"></div>
   </body>
